# motor-control

./: CMakeLists.txt  ProjectConfig.cmake  README.md  TestBench.cmake  googletest-download.cmake
include/motor-control/: calibrate_motor.h  motor.h  motor_gpio.h
src/: default_calibrate.cpp  default_calibrate.h  default_motor_gpio.cpp  default_motor_gpio.h  main.cpp  servo_motor.cpp  servo_motor.h
test/: CMakeLists.txt  mock_calibrate_motor.h  mock_motor_gpio.h  servo_motor_test.cpp
